<resources>
    <string name="base_url">https://itunes.apple.com/</string>
    <string name="app_name">IndeedTestApp</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_user">User</string>


    <!--Login-->
    <string name="hello_message_title">Hello</string>
    <string name="hello_message_subtitle">Enter your credentials for start</string>
    <string name="or">or</string>
    <string name="username_hint">Username</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must not be empty</string>
    <string name="password_hint">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_biometric_authorization">Use biometrics</string>

    <!-- Register-->
    <string name="register_code_hint">Scan your register code here</string>
    <string name="register_decode_host_error">QR Code does not match our pattern</string>
    <string name="register_undefined_decode_error">Some decode error happens :(</string>
    <string name="register_loading">Loading</string>
    <string name="register_successful">Register successfully completed! \n Redirecting to login page </string>

    <!--Prompt-->
    <string name="prompt_info_title">Sample App Authentication</string>
    <string name="prompt_info_subtitle">Please login to get access</string>
    <string name="prompt_info_description">IndeedTest App is using Android biometric authentication</string>
    <string name="prompt_info_use_app_password">Use app password</string>
    <string name="secret_key_name">biometric_encryption_key</string>

    <!--Home-->
    <string name="search_tip">Enter artist or album name for search</string>
    <string name="search_empty">Nothing was found</string>

    <!--User-->
    <string name="username">Username: %s</string>


    <!-- Permissions-->
    <string name="permissions_was_forever_denied">Permission were permanently denied by the user. Go to settings manually for enabling</string>

</resources>